crates/tlang_parser/tests/snapshots/parser_fn__function_declaration.snap
---
source: crates/tlang_parser/tests/parser_fn.rs
expression: "parse! (\"fn foo() { bar(); 1 + 2; }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 13,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 12,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "foo",
                span: Span(
                  start: 3,
                  end: 6,
                  start_lc: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 6,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: 3,
              end: 6,
              start_lc: LineColumn(
                line: 0,
                column: 3,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 6,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 3,
            end: 6,
            start_lc: LineColumn(
              line: 0,
              column: 3,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 6,
            ),
          ),
        ),
        parameters: [],
        guard: None,
        return_type_annotation: None,
        body: Block(
          id: 11,
          statements: [
            Stmt(
              id: 4,
              kind: Expr(Expr(
                id: 6,
                kind: Call(CallExpression(
                  callee: Expr(
                    id: 5,
                    kind: Path(Path(
                      segments: [
                        Ident(
                          name: "bar",
                          span: Span(
                            start: 11,
                            end: 14,
                            start_lc: LineColumn(
                              line: 0,
                              column: 11,
                            ),
                            end_lc: LineColumn(
                              line: 0,
                              column: 14,
                            ),
                          ),
                        ),
                      ],
                      res: Unresolved,
                      span: Span(
                        start: 11,
                        end: 14,
                        start_lc: LineColumn(
                          line: 0,
                          column: 11,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 14,
                        ),
                      ),
                    )),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: 11,
                      end: 14,
                      start_lc: LineColumn(
                        line: 0,
                        column: 11,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 14,
                      ),
                    ),
                  ),
                  arguments: [],
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 11,
                  end: 16,
                  start_lc: LineColumn(
                    line: 0,
                    column: 11,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 16,
                  ),
                ),
              )),
              span: Span(
                start: 11,
                end: 17,
                start_lc: LineColumn(
                  line: 0,
                  column: 11,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 17,
                ),
              ),
              leading_comments: [],
              trailing_comments: [],
            ),
            Stmt(
              id: 7,
              kind: Expr(Expr(
                id: 10,
                kind: BinaryOp(BinaryOpExpression(
                  op: Add,
                  lhs: Expr(
                    id: 8,
                    kind: Literal(UnsignedInteger(1)),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: 18,
                      end: 19,
                      start_lc: LineColumn(
                        line: 0,
                        column: 18,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 19,
                      ),
                    ),
                  ),
                  rhs: Expr(
                    id: 9,
                    kind: Literal(UnsignedInteger(2)),
                    leading_comments: [],
                    trailing_comments: [],
                    span: Span(
                      start: 22,
                      end: 23,
                      start_lc: LineColumn(
                        line: 0,
                        column: 22,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 23,
                      ),
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 18,
                  end: 23,
                  start_lc: LineColumn(
                    line: 0,
                    column: 18,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 23,
                  ),
                ),
              )),
              span: Span(
                start: 18,
                end: 24,
                start_lc: LineColumn(
                  line: 0,
                  column: 18,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 24,
                ),
              ),
              leading_comments: [],
              trailing_comments: [],
            ),
          ],
          expression: None,
          span: Span(
            start: 9,
            end: 26,
            start_lc: LineColumn(
              line: 0,
              column: 9,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 26,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 26,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 26,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 26,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 26,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 26,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 26,
    ),
  ),
)
