crates/tlang_parser/tests/snapshots/parser_fn__functional_function_declaration_with_comments_inbetween.snap
---
source: crates/tlang_parser/tests/parser_fn.rs
expression: "parse!\n(indoc!\n{\"\n        fn foo(1) { 1 }\n        // comment\n        fn foo(n) { n * 2 }\n    \"})"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 17,
      kind: FunctionDeclarations([
        FunctionDeclaration(
          id: 8,
          name: Expr(
            id: 3,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "foo",
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 3,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 6,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 3,
                ),
                end: LineColumn(
                  line: 0,
                  column: 6,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 3,
              ),
              end: LineColumn(
                line: 0,
                column: 6,
              ),
            ),
          ),
          parameters: [
            FunctionParameter(
              pattern: Pat(
                id: 4,
                kind: Literal(UnsignedInteger(1)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 7,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 8,
                  ),
                ),
              ),
              type_annotation: None,
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 7,
                ),
                end: LineColumn(
                  line: 0,
                  column: 8,
                ),
              ),
            ),
          ],
          guard: None,
          return_type_annotation: None,
          body: Block(
            id: 7,
            statements: [],
            expression: Some(Expr(
              id: 6,
              kind: Literal(UnsignedInteger(1)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 12,
                ),
                end: LineColumn(
                  line: 0,
                  column: 13,
                ),
              ),
            )),
            span: Span(
              start: LineColumn(
                line: 0,
                column: 10,
              ),
              end: LineColumn(
                line: 0,
                column: 15,
              ),
            ),
          ),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 0,
            ),
            end: LineColumn(
              line: 0,
              column: 15,
            ),
          ),
        ),
        FunctionDeclaration(
          id: 16,
          name: Expr(
            id: 9,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "foo",
                  span: Span(
                    start: LineColumn(
                      line: 2,
                      column: 4,
                    ),
                    end: LineColumn(
                      line: 2,
                      column: 7,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: LineColumn(
                  line: 2,
                  column: 4,
                ),
                end: LineColumn(
                  line: 2,
                  column: 7,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 2,
                column: 4,
              ),
              end: LineColumn(
                line: 2,
                column: 7,
              ),
            ),
          ),
          parameters: [
            FunctionParameter(
              pattern: Pat(
                id: 10,
                kind: Identifier(Ident(
                  name: "n",
                  span: Span(
                    start: LineColumn(
                      line: 2,
                      column: 8,
                    ),
                    end: LineColumn(
                      line: 2,
                      column: 9,
                    ),
                  ),
                )),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: LineColumn(
                    line: 2,
                    column: 8,
                  ),
                  end: LineColumn(
                    line: 2,
                    column: 9,
                  ),
                ),
              ),
              type_annotation: None,
              span: Span(
                start: LineColumn(
                  line: 2,
                  column: 8,
                ),
                end: LineColumn(
                  line: 2,
                  column: 9,
                ),
              ),
            ),
          ],
          guard: None,
          return_type_annotation: None,
          body: Block(
            id: 15,
            statements: [],
            expression: Some(Expr(
              id: 14,
              kind: BinaryOp(BinaryOpExpression(
                op: Mul,
                lhs: Expr(
                  id: 12,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "n",
                        span: Span(
                          start: LineColumn(
                            line: 2,
                            column: 13,
                          ),
                          end: LineColumn(
                            line: 2,
                            column: 14,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: LineColumn(
                        line: 2,
                        column: 13,
                      ),
                      end: LineColumn(
                        line: 2,
                        column: 14,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 2,
                      column: 13,
                    ),
                    end: LineColumn(
                      line: 2,
                      column: 14,
                    ),
                  ),
                ),
                rhs: Expr(
                  id: 13,
                  kind: Literal(UnsignedInteger(2)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 2,
                      column: 17,
                    ),
                    end: LineColumn(
                      line: 2,
                      column: 18,
                    ),
                  ),
                ),
              )),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 2,
                  column: 13,
                ),
                end: LineColumn(
                  line: 2,
                  column: 18,
                ),
              ),
            )),
            span: Span(
              start: LineColumn(
                line: 2,
                column: 11,
              ),
              end: LineColumn(
                line: 2,
                column: 20,
              ),
            ),
          ),
          leading_comments: [
            Token(
              kind: SingleLineComment(" comment"),
              span: Span(
                start: LineColumn(
                  line: 1,
                  column: 1,
                ),
                end: LineColumn(
                  line: 1,
                  column: 11,
                ),
              ),
            ),
          ],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 2,
              column: 1,
            ),
            end: LineColumn(
              line: 2,
              column: 20,
            ),
          ),
        ),
      ]),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 2,
          column: 20,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 2,
      column: 20,
    ),
  ),
)
