crates/tlang_parser/tests/snapshots/parser_fn__implicit_return_expressions.snap
---
source: crates/tlang_parser/tests/parser_fn.rs
expression: "parse! (\"fn foo() { let x = 1; x }\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 11,
      kind: FunctionDeclaration(FunctionDeclaration(
        id: 10,
        name: Expr(
          id: 3,
          kind: Path(Path(
            segments: [
              Ident(
                name: "foo",
                span: Span(
                  start: LineColumn(
                    line: 0,
                    column: 3,
                  ),
                  end: LineColumn(
                    line: 0,
                    column: 6,
                  ),
                ),
              ),
            ],
            res: Unresolved,
            span: Span(
              start: LineColumn(
                line: 0,
                column: 3,
              ),
              end: LineColumn(
                line: 0,
                column: 6,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 3,
            ),
            end: LineColumn(
              line: 0,
              column: 6,
            ),
          ),
        ),
        parameters: [],
        guard: None,
        return_type_annotation: None,
        body: Block(
          id: 9,
          statements: [
            Stmt(
              id: 6,
              kind: Let(LetDeclaration(
                pattern: Pat(
                  id: 4,
                  kind: Identifier(Ident(
                    name: "x",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 15,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 16,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 15,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 16,
                    ),
                  ),
                ),
                expression: Expr(
                  id: 5,
                  kind: Literal(UnsignedInteger(1)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 19,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 20,
                    ),
                  ),
                ),
                type_annotation: None,
              )),
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 11,
                ),
                end: LineColumn(
                  line: 0,
                  column: 21,
                ),
              ),
              leading_comments: [],
              trailing_comments: [],
            ),
          ],
          expression: Some(Expr(
            id: 8,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "x",
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 22,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 23,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 22,
                ),
                end: LineColumn(
                  line: 0,
                  column: 23,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: LineColumn(
                line: 0,
                column: 22,
              ),
              end: LineColumn(
                line: 0,
                column: 23,
              ),
            ),
          )),
          span: Span(
            start: LineColumn(
              line: 0,
              column: 9,
            ),
            end: LineColumn(
              line: 0,
              column: 25,
            ),
          ),
        ),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: LineColumn(
            line: 0,
            column: 0,
          ),
          end: LineColumn(
            line: 0,
            column: 25,
          ),
        ),
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 25,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 25,
    ),
  ),
)
